typos and versioning

--- a/data/ClimatologyInformation.html
+++ b/data/ClimatologyInformation.html
@@ -6,7 +6,7 @@
 <body alink="#ff0000" bgcolor="#ffffff" link="#0000e2" text="#000000" vlink="#bb0000">
     <center><h3>Climatology Plugin For OpenCPN</h3></center>
 <br>
-<p>Intended to aid in planning sailing voyages, to help visualize weather patterns, and to integrate with weather routing plugin to compute optimal sailing routes.
+<p>Intended to aid in planning sailing voyages, to help visualize weather patterns, and to integrate with the weather routing plugin to compute optimal sailing routes.
 <p>Satellite weather data from the last 30 years is averaged, then represented using only useful bits, then compressed to produce a much smaller database used by the plugin.
 <p>Raw Data is compiled from the following sources:
 <pre>
