add data references and update elnino years

--- a/data/ClimatologyInformation.html
+++ b/data/ClimatologyInformation.html
@@ -18,8 +18,10 @@ Relative Humidity: ftp://ftp.cdc.noaa.gov/Datasets/icoads/1degree/global/enh/rhu
 Cloud: http://www.jisao.washington.edu/data/coads_climatologies/cldccoadsclim5079.nc
 Sea Level Pressure: http://www.jisao.washington.edu/data/coads_climatologies/slpcoadsclim5079.nc
 Sea Surface Temperature: http://www.jisao.washington.edu/data/coads_climatologies/sstcoadsclim6079.1deg.nc
+Lightning: ftp://ghrc.nsstc.nasa.gov/pub/lis/climatology/HRMC/data/LISOTD_HRMC_V2.3.2013.hdf
 Sea Depth: http://www.esrl.noaa.gov/psd/data/data.nodc.woa98.html
 Cyclone Tracks: http://unisys.com
+El Nino Years: http://www.cpc.ncep.noaa.gov/products/analysis_monitoring/ensostuff/ensoyears.shtml
 </pre>
 <pre>The Climatology Plugin is written and maintained by Sean D'Epagnier</pre>
 </body></html>
