--- a/data/ClimatologyInformation.html
+++ b/data/ClimatologyInformation.html
@@ -10,8 +10,8 @@
 <p>Satellite weather data from the last 30 years is averaged, then represented using only useful bits, then compressed to produce a much smaller database used by the plugin.
 <p>Raw Data is compiled from the following sources:
 <pre>
-Wind: ftp://eclipse.ncdc.noaa.gov/pub/seawinds/SI/uv/
-Current: http://podaac.jpl.nasa.gov/dataset/OSCAR_L4_OC_third-deg
+Wind: ftp://eclipse.ncdc.noaa.gov/pub/seawinds/SI/uv/ (1987 to 2013)
+Current: http://podaac.jpl.nasa.gov/dataset/OSCAR_L4_OC_third-deg (1992 to 2012)
 Surface Air Temperature: ftp://ftp.cdc.noaa.gov/Datasets/ncep.marine/air.mean.nc
 Precipitation: ftp://ftp.cdc.noaa.gov/Datasets/cmap/std/precip.mon.mean.nc
 Relative Humidity: ftp://ftp.cdc.noaa.gov/Datasets/icoads/1degree/global/enh/rhum.mean.nc
